--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="block-title">
             <h3>Contact Form</h3>
         </div>
-        <form id="contact-form" method="post" action="./mail.php">
+        <form id="contact-form">
 
             <div class="messages"></div>
 
@@ -35,10 +35,10 @@
                 </div>
 
                 <div class="form-group">
-                    <select class="form-control">
-                        <option class="form-control">Hi</option>
-                        <option class="form-control">Let's talk about a speaking engagement</option>
-                        <option class="form-control">Let's talk about a project</option>
+                    <select id="purpose" class="form-control">
+                        <option value="0" class="form-control">Hi</option>
+                        <option value="1" class="form-control">Let's talk about a speaking engagement</option>
+                        <option value="2" class="form-control">Let's talk about a project</option>
                     </select>
                     <div class="form-control-border"></div>
                     <i class="form-control-icon pe-7s-id"></i>
@@ -53,7 +53,7 @@
                     <div class="help-block with-errors"></div>
                 </div>
 
-                <input type="submit" class="btn btn-primary btn-lg" value="Send message">
+                <input type="button" id="send_message" class="btn btn-primary btn-lg" value="Send message">
             </div>
         </form>
     </div>
